--- a/KLS_WEB/KLS_WEB/Views/Carriers/Contacts/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Contacts/Index.cshtml
@@ -155,7 +155,7 @@
                     $("#Nombre").val(dataContacts[indice].nombre);
                     $("#Telefono").val(dataContacts[indice].telefono);
                     $("#Correo").val(dataContacts[indice].correo);
-                    $('#Estatus option[value="' + dataContacts[indice].estatus + '"]').attr("selected", true);
+                    $('#estatus option[value="' + dataContacts[indice].estatus + '"]').attr("selected", true);
                     $("#modalDiv").modal("show");
 
                 } catch (error) {
