--- a/KLS_WEB/KLS_WEB/Views/Catalogs/City/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/City/Index.cshtml
@@ -127,7 +127,7 @@
                 } else {
                     $.post("City/setCity", jsonData, function (res) {
                         loadTable();
-                        dToast("success", "Se guardo el registro", "Registrado");
+                        dToast("success", "Se guardó el registro", "Registrado");
                         $(".guardar").attr("disabled", false);
                         $('#frmRegister').trigger("reset");
                     }).fail(function (error) {
@@ -144,8 +144,11 @@
             $.get("Country/getCountry", function (res) {
                 catPais = res;
                 $("#id_pais").empty();
-                $.each(res, function (item, key) {
-                    $("#id_pais").append(`<option value="${key.id}">${key.pais}</option>`);
+                $.each(res, function (item, key) {  
+                    if (key.estatus != 2) {
+                        $("#id_pais").append(`<option value="${key.id}">${key.pais}</option>`);
+                    }
+                    
                 });
                 $("#id_pais").select2();
                 loadTable();
@@ -160,7 +163,9 @@
                 catEstado = res;
                 $("#id_estado").empty();
                 $.each(res, function (item, key) {
-                    $("#id_estado").append(`<option value="${key.id}">${key.nombre}</option>`);
+                    if (key.estatus != 2) {
+                        $("#id_estado").append(`<option value="${key.id}">${key.nombre}</option>`);
+                    }
                 });
                 $("#id_estado").select2();
             }).fail(function (error) {
