--- a/KLS_WEB/KLS_WEB/Views/Catalogs/Regions/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/Regions/Index.cshtml
@@ -123,7 +123,7 @@
                 } else {
                     $.post("Regions/setRegion", jsonData, function (res) {
                         loadTable();
-                        dToast("success", "Se guardo el registro", "Registrado");
+                        dToast("success", "Se guardó el registro", "Registrado");
                         $(".guardar").attr("disabled", false);
                         btnGroup.length = 0;
                         $("#estadosBtn").empty();
@@ -223,10 +223,13 @@
             $("#id_estado").append(`<option value="0">selecciona</option>`);
             try {
                 $.each(catEstado, function (item, key) {
-                    let indice = btnGroup.findIndex(estado => parseInt(estado.id_estado) === parseInt(key.id));
-                    if (indice < 0) {
-                        $("#id_estado").append(`<option value="${key.id}">${key.nombre}</option>`);
+                    if (key.estatus != 2) {
+                        let indice = btnGroup.findIndex(estado => parseInt(estado.id_estado) === parseInt(key.id));
+                        if (indice < 0) {
+                            $("#id_estado").append(`<option value="${key.id}">${key.nombre}</option>`);
+                        }
                     }
+
                 });
             } catch (error) {
                 dToast("error", "Error al listar estados: " + error, "Error");
