--- a/KLS_WEB/KLS_WEB/Views/Catalogs/CustomsBrokers/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/CustomsBrokers/Index.cshtml
@@ -137,7 +137,7 @@
                 } else {
                     $.post("CustomsBrokers/setCustoms", jsonData, function (res) {
                         loadTable();
-                        dToast("success", "Se guardo el registro", "Registrado");
+                        dToast("success", "Se guardó el registro", "Registrado");
                         $(".guardar").attr("disabled", false);
                         $('#frmRegister').trigger("reset");
                     }).fail(function (error) {
@@ -153,11 +153,10 @@
             $(".guardar").html(accion);
             $("#titulo-modal").empty("");
             $("#titulo-modal").html(titulo);
-
+            $("#idEditar").val(idEditar);
             if (accion == "Editar") {
                 try {
                     let indice = dataCustoms.findIndex(service => service.id === idEditar);
-                    $("#idEditar").val(idEditar);
                     $("#nombre").val(dataCustoms[indice].nombre);
                     $("#direccion").val(dataCustoms[indice].direccion);
                     $("#telefono").val(dataCustoms[indice].telefono);
