--- a/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
+++ b/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
@@ -343,3 +343,16 @@ form .form-group {
 input[type=text]{
     text-transform: uppercase;
 }
+
+/*Checkbox - Detalle viajes - Requisitos*/
+.custome-check{
+    width: 60px !important;
+    height: 23px !important;
+}
+.custome-input {
+    text-transform: lowercase !important;
+    border-style: none;
+    border-radius: 5px 5px 0px 0px;
+    background: #F7F7F7;
+    border-bottom: 2px solid #CCCDCC;
+}
