--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -253,6 +253,22 @@
             $("#modalDetalle").modal("show");
         }
 
+        function dSelect(select) {
+            $('#'+select).select2({
+                language: {
+
+                    noResults: function () {
+
+                        return "No hay resultado";
+                    },
+                    searching: function () {
+
+                        return "Buscando..";
+                    }
+                }
+            });
+        }
+
     </script>
     @RenderSection("Scripts", required: false)
 </body>
