--- a/KLS_WEB/KLS_WEB/Views/Catalogs/Regions/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Catalogs/Regions/Index.cshtml
@@ -151,12 +151,13 @@
                 $.each(btnGroup, function (item, key) {
                     var indice_e = catEstado.findIndex(service => parseInt(service.id) === parseInt(key.id_estado));
                     $("#estadosBtn").append(
-                        `<button type="button" class="btn btn-dark"  id="${key.id_estado}">
-                        ${catEstado[indice_e].nombre}        
-                        <i class="material-icons" onclick="delBtn(${key.id_estado})">
-                            delete_outline
-                        </i>
-                    </button>`
+                        `
+                            <button type="button" class="btn btn-dark btn-sm"  id="${key.id_estado}">
+                                ${catEstado[indice_e].nombre}        
+                                <i class="material-icons" onclick="delBtn(${key.id_estado})">
+                                    delete_outline
+                                </i>
+                            </button>`
                     );
                 });
             } catch (error) {
@@ -212,7 +213,8 @@
             $.get("State/getState", function (res) {
                 catEstado = res;
                 selEstado();
-                $("#id_estado").select2();
+                //$("#id_estado").select2();
+                dSelect('id_estado');
                 loadTable();
             }).fail(function (error) {
                 dToast("error", "Error al obtener paises", "Atencion!");
