--- a/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
+++ b/KLS_WEB/KLS_WEB/wwwroot/css/theme.css
@@ -361,3 +361,8 @@ input[type=text]{
         background-color: #dee2e6;
         border-color: #dee2e6;
     }
+
+/*Selects en mayuscula*/
+li, .selection {
+    text-transform: uppercase !important;
+}
