--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -13,7 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/theme.css">
     <link rel="stylesheet" href="~/css/toastr.css">
-    <link href="/css/dataTable.css" rel="stylesheet">
+    <link href="/css/dataTable.css" rel="stylesheet"><link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     @RenderSection("Styles", required: false)
 </head>
 <body>
