--- a/KLS_WEB/KLS_WEB/Views/Travel/New.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travel/New.cshtml
@@ -9,11 +9,8 @@
     .form-check-label {
         font-size: 12px !important;
     }
-
-    li, .selection {
-        text-transform: uppercase !important;
-    }
 </style>
+
 <div class="data-content p-4 text-left">
     <div class="p-4">
         <div class="text-left d-flex mb-3">
@@ -157,8 +154,94 @@
                     </div>
                 </div>
 
+                <div>
+
+                    <div class="row mt-3">
+                        <div class="col-4 d-flex flex-row">
+                            <i class="material-icons text-danger" style="cursor:pointer;" onclick="deleteService();">delete</i><h5>Terrestre Nacional</h5>
+                        </div>
+                        <div class="col-8 d-flex justify-content-end">
+                            <div class="d-flex justify-content-between">
+
+                                <div class="form-group row mr-3">
+                                    <label class="col-sm-3 col-form-label col-form-label-sm">COSTO</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" class="form-control form-control-sm" id="costo" disabled>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-sm-6 col-form-label col-form-label-sm mr-0">PRECIO A CLIENTE</label>
+                                    <div class="col-sm-6">
+                                        <input type="number" class="form-control form-control-sm" name="terrestrenacionalprecio" required>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
+                <div class="row">
+                    <div class="col-6 card">
+                        <div class="form-group mt-3">
+                            <label class="col-form-label col-form-label-sm font-weight-bold">TRANSPORTISTA</label>
+                            <div>
+                                <select class="form-control form-control-sm" id="transportista" name="transportista">
+                                    <option value="4224">mi transportista</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group mt-3">
+                            <label class="col-form-label col-form-label-sm font-weight-bold">CHOFER</label>
+                            <select class="form-control form-control-sm" id="chofer" name="chofer">
+                                <option value="3219">mi chofer</option>
+                            </select>
+                            <div class="row">
+                                <div class="col-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                                        <label class="form-check-label" for="flexCheckChecked">
+                                            Licencia
+                                        </label>
+                                    </div>
+
+                                </div>
+
+                                <div class="col-8">
+                                    <span>hdsaidhiosah</span>
+                                </div>
+
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                                <label class="form-check-label" for="flexCheckChecked">
+                                    No. Teléfono
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                                <label class="form-check-label" for="flexCheckChecked">
+                                    IMSS
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 bg-light-grey">
+                        <div class="col-12">
+                            <div class="poppins medium size-14 text-left mt-4 mb-3">EQUIPO</div>
+                            <div class="d-flex justify-content-between">
+                                <select class="form-control form-control-sm col-4" name="equipo" required>
+                                    <option value="8231">Mi equipo</option>
+                                </select>
+                                <div class="col-8 d-flex flex-row justify-content-between">
+                                    <p>Estatus</p>
+                                    <i class="material-icons text-danger">delete</i>
+                                </div>
+                            </div>
+                            <i class="material-icons" style="cursor:pointer;" onclick="addEquipo(this);">add_box</i>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="row p-3">
@@ -200,7 +283,7 @@
                 <form id="frmServicios" class="viaje"
                       onsubmit="event.preventDefault();">
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="0" name="terestrenacional">
+                        <input class="form-check-input" type="checkbox" id="0" name="terrestrenacional">
                         <label class="form-check-label" for="0">
                             Terrestre nacional
                         </label>
@@ -368,24 +451,16 @@
             });
         } else {
             const servicios = $('#frmServicios').serialize();
-            const split = servicios.split('&');
-            let addservicios = ``;
-            if (split[0] != "") {
-                split.map(servicio => {
-                    const servicioselected = servicio.split('=');
-                    const id = $(`[name=${servicioselected[0]}`).attr('id');
-                    const text = $(`[for=${id}]`).text();
-
-                    addservicios += `<p class="mr-1">●${text}</p>`;
-                    $('.addServicios').css('opacity', 1);
+            if (servicios) {
+                $.post("@Url.Action("ReturnServicios", "Travels")", { servicios: servicios }, function (res) {
+                    console.log('response:', res);
                 });
-            } else {
+          } else {
                 addservicios = `<h3>AGREGA SERVICIOS</h3>`;
                 $('.addServicios').css('opacity', 0.2);
             }
-            $('.addServicios').html(addservicios);
         }
-        }
+    }
 
         //Cargar ciudades
         function loadUnits() {
@@ -438,7 +513,7 @@
             });
             $("#id_estado").select2();
         }).fail(function (error) {
-            dToast("error", "Error al obtener estados", "Atencion!");
+            dToast("error", "Error al tener esUrlados", "Atencion!");
         });
     }
 
