--- a/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
@@ -364,7 +364,7 @@
                                 <div>
                                     <input type="text" placeholder="Escribe aquí" class="form-control custome-input" required>
                                 </div>
-                            </div>                            
+                            </div>
                         </div>
                         <div class="col-md-12 p-0 d-flex">
                             <div class="form-group col-md-4">
@@ -380,7 +380,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>                                       
+                    </div>
                 </div>
                 <div class="py-4 shadow bg-white">
                     <div class="row">
@@ -469,9 +469,9 @@
                 <div class="p-4 shadow bg-white">
                     <h6>Requisitos especiales</h6>
                     <div class="col-sm-12 p-0">
-                        <textarea placeholder="Opciones" class="form-control form-control-sm" rows="35"></textarea>                        
+                        <textarea placeholder="Opciones" class="form-control form-control-sm" rows="35"></textarea>
                     </div>
-                </div>            
+                </div>
             </div>
         </div>
     </div>
@@ -481,10 +481,10 @@
 <div class="data-content px-4 text-left d-none" id="div-facturacion">
     <div class="p-4">
         <div class="row">
-            <div class="col-md-6">                               
+            <div class="col-md-6">
                 <div class="text-left d-flex justify-content-between mb-3">
                     <h4>FACTURACIÓN</h4>
-                    <div style="padding-left:20%;">
+                    <div style="padding-left:20%;" onclick="selectServicios(this);">
                         <a class="btn btn-sm bg-white" style="font-size:1.8rem;width:3.5rem" href="#">
                             <span class="material-icons">
                                 add
@@ -499,13 +499,13 @@
                             <tr>
                                 <th>Nombre</th>
                                 <th>Fecha de carga</th>
-                                <th>Usuario</th>                            
+                                <th>Usuario</th>
                                 <th>Acciones</th>
                             </tr>
                         </thead>
                         <tbody id="table-info"></tbody>
                     </table>
-                </div>                
+                </div>
             </div>
         </div>
     </div>
@@ -518,7 +518,7 @@
         <div class="row">
             <div class="col-md-6 mt-5">
                 <div class="text-left d-flex justify-content-between">
-                    <h4>EVIDENCIA DIGITAL</h4>                    
+                    <h4>EVIDENCIA DIGITAL</h4>
                 </div>
                 <div class="p-4 shadow bg-white">
                     <table id="table" class="table table-striped table-bordered display table-hover table-viajes text-uppercase" width="100%">
@@ -544,7 +544,7 @@
                             </span>
                         </a>
                     </div>
-                </div>                
+                </div>
                 <div class="p-4 shadow bg-white">
                     <div class="row">
                         <div class="col-md-6">
@@ -577,43 +577,72 @@
             </div>
         </div>
     </div>
-            </div>
-            @* hostorial *@
-            <div class="data-content px-4 text-left d-none" id="div-historial">
-                <div class="p-4">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="text-left d-flex justify-content-between mb-3">
-                                <h4>HISTORIAL</h4>
-                                <div style="padding-left:20%;">
-                                    <a class="btn btn-sm bg-white" style="font-size:1.8rem;width:3.5rem" href="#">
-                                        <span class="material-icons">
-                                            add
-                                        </span>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="p-4 shadow bg-white">
-                                <table id="table" class="table table-striped table-bordered display table-hover table-viajes text-uppercase" width="100%">
-                                    <thead>
-                                        <tr>
-                                            <th>Registro</th>
-                                            <th>Usuario</th>
-                                            <th>Fecha</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody id="table-info"></tbody>
-                                </table>
-                            </div>
-                        </div>
+</div>
+@* hostorial *@
+<div class="data-content px-4 text-left d-none" id="div-historial">
+    <div class="p-4">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="text-left d-flex justify-content-between mb-3">
+                    <h4>HISTORIAL</h4>
+                    <div style="padding-left:20%;">
+                        <a class="btn btn-sm bg-white" style="font-size:1.8rem;width:3.5rem" href="#">
+                            <span class="material-icons">
+                                add
+                            </span>
+                        </a>
                     </div>
                 </div>
-            </div>
 
-            @section Scripts{
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
-                <script>
+                <div class="p-4 shadow bg-white">
+                    <table id="table" class="table table-striped table-bordered display table-hover table-viajes text-uppercase" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Registro</th>
+                                <th>Usuario</th>
+                                <th>Fecha</th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-info"></tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--Modal global-->
+<div class="modal fade" id="modalDiv" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false"
+     aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="titulo-modal">AGREGAR</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body text-left">
+                <form asp-controller="Facturacion" asp-action="UploadFile" method="post" enctype="multipart/form-data">
+                    <div class="form-group col-12">
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input"  name="file" id="customFile">
+                            <label class="custom-file-label" for="customFile">Seleccione un archivo</label>
+                        </div>
+                    </div>
+                    <br />
+                    <button type="submit" class="btn btn-dark guardar" style="width:100%">Agregar</button>                  
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Modal global-->
+
+@section Scripts{
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
+    <script>
         $(window).ready(function () {
             valId();
             $("#frmRegister").submit(function (event) {
@@ -789,5 +818,16 @@
 
             });
         })
-                </script>
-            }
+
+        function selectServicios(element) {
+            const elemento = jQuery(element);
+            elemento.attr('disabled', true);
+            $("#modalDiv").modal("show");
+        }       
+        // Add the following code if you want the name of the file appear on select
+        $(".custom-file-input").on("change", function () {
+            var fileName = $(this).val().split("\\").pop();
+            $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+        });
+    </script>    
+}
